t+ta:[[வாந்தி]] ([[WT:EDIT|Assisted]]) <vomit#21441941>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -148,6 +148,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 *: Roman: {{t-|sh|povraćka|f}}, {{t-|sh|bljuvotina|f}}, {{t-|sh|povraćaj|m}}, {{t-|sh|izbljuvak|m}}
 * Spanish: {{t-|es|vómito|m}}
 * Swedish: {{t+|sv|spya}}
+* Tamil: {{t|ta|வாந்தி|tr=vānti|sc=Taml}}
 * Telugu: {{t+|te|వాంతి|tr=vaamthi|sc=Telu}}
 * Turkish: {{t+|tr|kusmuk}}, {{t+|tr|kusuntu}}
 * Ukrainian: {{t+|uk|блювота|f|tr=bljuvóta|sc=Cyrl}}, {{t+|uk|блювотиння|n|tr=bljuvotýnnja|sc=Cyrl}}
