--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -46,10 +46,10 @@
 * Azeri: {{t+|az|zeytun}}
 * {{trreq|ba}}
 * Basque: {{t|eu|oliba}}
-* {{trreq|be}}
+* Belarusian: {{t|be|аліўка|f|tr=alíŭka|sc=Cyrl}}, {{t|be|масліна|f|tr=maslína|sc=Cyrl}}
 * {{trreq|bn}}
 * {{trreq|br}}
-* {{trreq|bg}}
+* Bulgarian: {{t|bg|маслина|f|tr=maslína|sc=Cyrl}}
 * {{trreq|my}}
 * Catalan: {{t-|ca|oliva|f}}
 * Chinese:
@@ -77,23 +77,26 @@
 * Hindi: {{t-|hi|ज़ैतून|tr=zaitūn}}
 * Hungarian: {{t+|hu|olajbogyó}}
 * Icelandic: {{t+|is|ólífa|f}}
-{{trans-mid}}
 * Ido: {{t+|io|olivo}}
 * Indonesian: {{t+|id|zaitun}}
 * Irish: {{t-|ga|ológ|f}}
+{{trans-mid}}
 * Italian: {{t+|it|oliva|m}}
 * Japanese: {{t-|ja|オリーブ|tr=orību}}
+* Kazakh: {{t|kk|зәйтүн|tr=zäytün|sc=Cyrl}}
 * Khmer: {{t-|km|ផ្លែអូលីវ|tr=plae ooliiv|sc=Khmr}}
 * Korean: {{t+|ko|올리브|tr=ollibeu}}
 * Kurdish: {{t+|ku|zeytûn|f}}
+* Kyrgyz: {{t|ky|зайтун|tr=zaytun|sc=Cyrl}}
 * Latvian: {{t-|lv|olīve|f}}
-* {{trreq|lt}}
+* Lithuanian: {{t|lt|alyva|f}}
 * Luxembourgish: {{t-|lb|Oliv|f}}
 * Macedonian: {{t-|mk|маслинка|f|tr=máslinka}}
 * Malay: {{t-|ms|zaitun}}
 * {{trreq|ml}}
 * Maltese: {{t-|mt|żebbuġa|f}}
 * Middle Persian: {{tø|pal|𐭦𐭩𐭲𐭩|tr=zayt|sc=Phli}}
+* Mongolian: {{t|mn|чидун жимс|tr=čidun žims|sc=Cyrl}}
 * Norwegian: {{t-|no|oliven}}
 * Occitan: {{t+|oc|oliva|f}}
 * Persian: {{t+|fa|زیتون|tr=zeytun}}
@@ -107,17 +110,20 @@
 *: Cyrillic: {{t-|sh|маслина|f|sc=Cyrl}}
 *: Roman: {{t-|sh|maslina|f}}
 * Sicilian: {{t-|sc|aliva|f}}
+* Sinhalese: {{t|si|ඔලිව්|tr=oliv|sc=Sinh}}
 * Slovak: {{t-|sk|oliva|f}}
 * Slovene: {{t+|sl|oljka|f}} (1), {{t+|sl|oliva|f}} (2)
 * Spanish: {{t+|es|aceituna|f}}, {{t+|es|oliva|f}}
 * Swedish: {{t+|sv|oliv|c}}
+* Tagalog: {{t|tl|olibo}}
 * Tajik: {{t-|tg|зайтун|tr=zaytun|sc=Cyrl}}
+* Thai: {{t|th|กอก|tr=gòk|sc=Thai}}, {{t|th|มะกอก|tr=má-gòk|sc=Thai}}, {{t|th|มะกอกโอลีฟ|tr=má-gòk-oh-lêef|sc=Thai}}
 * Turkish: {{t+|tr|zeytin}}
 * Turkmen: {{t+|tk|zeýtun}}
-* {{trreq|uk}}
+* Ukrainian: {{t|uk|оливка|f|tr=olývka|sc=Cyrl}}, {{t|uk|маслина|f|tr=maslýna|sc=Cyrl}}
 * Urdu: {{t-|ur|زیتون|tr=zaitūn}}
 * Uyghur: {{t-|ug|زەيتۇن|tr=zeytun|sc=ug-Arab}}
-* {{trreq|uz}}
+* Uzbek: {{t|uz|zaytun}}
 * Vietnamese: {{t-|vi|ô liu}}
 * Volapük: {{t+|vo|learafluk}}
 * {{trreq|cy}}
