t+my:[[သံလွင်]] t-balance ([[WT:EDIT|Assisted]]) <olive#21444092>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -50,7 +50,7 @@
 * {{trreq|bn}}
 * {{trreq|br}}
 * Bulgarian: {{t|bg|маслина|f|tr=maslína|sc=Cyrl}}
-* {{trreq|my}}
+* Burmese: {{t|my|သံလွင်|tr=than lwin|sc=Mymr}}
 * Catalan: {{t-|ca|oliva|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|橄欖}}, {{t|cmn|橄榄|tr=gǎnlǎn}}
@@ -79,8 +79,8 @@
 * Icelandic: {{t+|is|ólífa|f}}
 * Ido: {{t+|io|olivo}}
 * Indonesian: {{t+|id|zaitun}}
-* Irish: {{t-|ga|ológ|f}}
 {{trans-mid}}
+* Irish: {{t-|ga|ológ|f}}
 * Italian: {{t+|it|oliva|m}}
 * Japanese: {{t-|ja|オリーブ|tr=orību}}
 * Kazakh: {{t|kk|зәйтүн|tr=zäytün|sc=Cyrl}}
