--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -19,22 +19,25 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg
 {{en-noun}}
 
 # A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
-#: ''The rope '''bridge''' crosses the river.''
+#*{{quote-magazine|date=2013-06-29|volume=407|issue=8842|page=28|magazine={{w|The Economist}}
+|title=[http://www.economist.com/news/asia/21580209-natural-disaster-aggravated-poor-response-high-and-wet High and wet]
+|passage=Floods in northern India, mostly in the small state of Uttarakhand, have wrought disaster on an enormous scale. The early, intense onset of the monsoon on June 14th swelled rivers, washing away roads, '''bridges''', hotels and even whole villages. Rock-filled torrents smashed vehicles and homes, burying victims under rubble and sludge.}}
+#: {{usex|The rope '''bridge''' crosses the river.}}
 #{{senseid|en|bony ridge of the nose}}{{context|anatomy|lang=en}} The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]].
-#: ''Rugby players often break the '''bridge''' of their noses.''
+#: {{usex|Rugby players often break the '''bridge''' of their noses.}}
 # {{context|medicine|lang=en}} A rudimentary procedure before definite solution
-#: ''ECMO is used as a bridge to surgery to stabilize the patient''
+#: {{usex|ECMO is used as a bridge to surgery to stabilize the patient.}}
 # {{context|dentistry|lang=en}} A [[prosthesis]] replacing one or several adjacent [[tooth|teeth]].
-#: ''The dentist pulled out the decayed tooth and put in a '''bridge'''.''
+#: {{usex|The dentist pulled out the decayed tooth and put in a '''bridge'''.}}
 # {{context|nautical|lang=en}} An [[elevated]] [[platform]] above the upper [[deck]] of a [[mechanically]] [[propel]]led [[ship]] from which it is [[navigate]]d and from which all activities on deck can be seen and controlled by the [[captain]], etc; smaller ships have a [[wheelhouse]], and [[sailing ship]]s were controlled from a [[quarterdeck]].
-#: ''The first officer is on the '''bridge'''.''
+#: {{usex|The first officer is on the '''bridge'''.}}
 # {{context|music|lang=en}} The piece, on [[string instrument]]s, that supports the [[string]]s from the [[sounding board]].
 # {{context|computing|lang=en}} A device which connects two or more [[computer]] [[bus|buses]], typically in a transparent manner.
-#: ''This chip is the '''bridge''' between the front-side bus and the I/O bus.''
+#: {{usex|This chip is the '''bridge''' between the front-side bus and the I/O bus.}}
 # {{context|communication|lang=en}} A system which connects two or more [[LAN|local area networks]] at layer 2.
-#: ''The LAN '''bridge''' uses a spanning tree algorithm.''
+#: {{usex|The LAN '''bridge''' uses a spanning tree algorithm.}}
 # {{context|music|lang=en}} A song contained within another song, often demarcated by meter, key, or melody.
-#: ''The lyrics in the song's '''bridge''' inverted its meaning.''
+#: {{usex|The lyrics in the song's '''bridge''' inverted its meaning.}}
 # {{context|chemistry|lang=en}} An [[intramolecular]] [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s.
 # {{context|electronics|lang=en}} An unintended [[solder]] [[connection]] between two or more [[component]]s or pins.
 # {{context|electronics|lang=en}} Any of several [[electrical]] [[device]]s that [[measure]] characteristics such as [[impedance]] and [[inductance]] by [[balancing]] different parts of a [[circuit]]
