/* Old English */ Declension, Pronunciation <cost#21453996>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -278,6 +278,8 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 
 ===Etymology===
 {{etyl|gem-pro|ang}} {{recons|kust-|lang=gem-pro}}, from {{etyl|ine-pro|ang}} {{recons|ǵews-||to choose|lang=ine-pro}}. Akin to Old Saxon {{term|koston|kostōn|to try, tempt|lang=osx}}, {{etyl|goh|-}} {{term|koston|kostōn|to taste, test, try by tasting|lang=goh}} (German {{term|kosten|lang=de}}), Icelandic {{term|kosta||to try, tempt|lang=is}}, {{etyl|got|-}} {{term|𐌺𐌿𐍃𐍄𐌿𐍃||test|tr=kustus|lang=got}}, Old English {{term|cystan||to spend, get the value of, procure|lang=ang}}, Old English {{term|cyst||proof, test, trial; choice|lang=ang}}, {{term|ceosan|ċēosan|to choose|lang=ang}}. More at [[choose]].
+===Pronunciation===
+* {{IPA|/ˈkost/|lang=ang}}
 
 ===Noun===
 {{ang-noun|g=m}}
@@ -286,11 +288,17 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 # [[condition]], [[manner]], [[way]]
 #: ''þæs costes þe (on the condition that)''
 
+====Declension====
+{{ang-decl-noun-a-m|cost}}
+
 ===Adjective===
-{{head|ang|adjective}}
+{{ang-adj}}
 
 # [[chosen]], [[choice]]
 # [[tried]], [[proven]]; [[excellent]]
+
+====Declension====
+{{ang-adjdec-long|cost}}
 
 ----
 
