--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -14,7 +14,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=yu6|tra=[[癒]], [[瘉]]}}
+{{yue-hanzi|jyut=[[jyu6]]|y=yu6|tra=[[癒]], [[瘉]]}}
 
 # {{defn|lang=yue|sort=心09}}
 
