added "Min Nan" section with /nan-hanzi/ template and two "tlpa=" readings (TLPA) and /defn|lang=nan|sort=心09/ template; added "References" section and twblg.dict.edu.tw link <愈#21455300>

--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -58,6 +58,18 @@
 * [[愈演愈烈]]
 * [[愈…愈…]]
 
+----
+
+==Min Nan==
+
+===Hanzi===
+{{nan-hanzi|tlpa=jú (ju<sup>2</sup>), lú (lu<sup>2</sup>)}}
+
+# {{defn|lang=nan|sort=心09}}
+
+====References====
+*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9454&curpage=1&sample=%E6%84%88&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=1 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
+
 [[zh-min-nan:愈]]
 [[fr:愈]]
 [[ko:愈]]
