--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -70,6 +70,15 @@
 ====References====
 *[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9454&curpage=1&sample=%E6%84%88&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=1 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[rủ]]|rs=心09}}
+
+# {{defn|lang=vi|sort=心09}}
+
 [[zh-min-nan:愈]]
 [[fr:愈]]
 [[ko:愈]]
