--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -17,44 +17,41 @@
 {{en-adj|straighter|straightest}}
 
 # Not [[crooked]] or [[bent]]; having a constant direction throughout its length. {{defdate|from 14th c.}}
-#* '''1811''', Jane Austen, ''Sense and Sensibility'':
+#* '''1811''', {{w|Jane Austen}}, ''{{w|Sense and Sensibility}}'':
 #*: I do not like crooked, twisted, blasted trees. I admire them much more if they are tall, '''straight''' and flourishing.
-#* '''2011''', Adharanand Finn, ''The Guardian'', 22 Mar 2011:
+#* '''2011''', Adharanand Finn, ''{{w|The Guardian}}'', 22 Mar 2011:
 #*: The other people, I presume, are supposed to be standing to attention, but they're all smiling at me. The lines are not even '''straight'''.
 # {{context|obsolete|lang=en}} [[stretched|Stretched]] out; fully [[extended]]. {{defdate|15th-16th c.}}
 # Of a path, trajectory etc.: [[direct]], [[undeviating]]. {{defdate|from 15th c.}}
-#* '''1913''', John Fox, ''The Kentuckians'', p. 185:
+#* '''1913''', {{w|John Fox, Jr.}}, ''The Kentuckians'', p. 185:
 #*: Now, as the world knows, the '''straightest''' way to the heart of the honest voter is through the women of the land, and the '''straightest''' way to the heart of the women is through the children of the land; and one method of winning both, with rural politicians, is to kiss the babies wide and far.
 #* '''2000''', Allan Wood, ''Babe Ruth and the 1918 Red Sox'', p. 293:
 #*: He had no time to set himself, but his throw was '''straight''' and true. Pick slid in, spikes high, and Schang tagged him in the ribs a foot or two from the plate.
+#*{{quote-magazine|date=2013-06-29|volume=407|issue=8842|page=55|magazine={{w|The Economist}}
+|title=[http://www.economist.com/news/international/21580191-edward-snowdens-odyssey-leaves-america-nonplussed-and-its-allies-dismayed-russia-china Travels and travails]
+|passage=Even without hovering drones, a lurking assassin, a thumping score and a denouement, the real-life story of Edward Snowden, a rogue spy on the run, could be '''straight''' out of the cinema. But, as with Hollywood, the subplots and exotic locations may distract from the real message: America’s discomfort and its foes’ glee.}}
 # Free from [[dishonesty]]; [[honest]], law-abiding. {{defdate|from 16th c.}}
-#* '''1879''', Anthony Trollope, ''John Caldigate'':
+#* '''1879''', {{w|Anthony Trollope}}, ''John Caldigate'':
 #*: ‘It wasn't the proper thing, squoire. It wasn't '''straight'''.’
 # Perfectly [[horizontal]] or [[vertical]]; not diagonal or oblique. {{defdate|from 17th c.}}
 #* '''2004''', Chris Weston, ''500 Digital Photography Hints, Tips, and Techniques'':
 #*: There's nothing more annoying than taking a great picture, only to find that the horizon isn't '''straight'''.
 # [[direct|Direct]] in communication; [[unevasive]], [[straightforward]]. {{defdate|from 19th c.}}
-#* '''2003''', Rosie Cowan, ''The Guardian'', 24 Apr 2003:
+#* '''2003''', Rosie Cowan, ''{{w|The Guardian}}'', 24 Apr 2003:
 #*: Tony Blair issued a direct challenge to the IRA yesterday when he demanded they give '''straight''' answers to three simple questions [...].
 # {{context|tennis|lang=en}} Describing the [[set]]s in a [[match]] of which the winner did not lose a single set. {{defdate|from 19th c.}}
 #* '''2011''', Press Association, 10 Feb 2011:
 #*: Murray started well against Marcos Baghdatis before slumping to defeat in '''straight''' sets and the British No1 admitted he may not have been mentally prepared for the rigours of the ATP Tour after a gruelling start to 2011.
 # In a row, in unbroken [[sequence]]. {{defdate|from 19th c.}}
-#* {{quote-news
-|year=2011
-|date=September 24
-|author=David Ornstein
-|title=Arsenal   3 - 0   Bolton
-|work=BBC Sport
-|url=http://news.bbc.co.uk/sport2/hi/football/14958156.stm
-|page=
+#* {{quote-news|year=2011|date=September 24|author=David Ornstein|work=BBC Sport
+|title=[http://news.bbc.co.uk/sport2/hi/football/14958156.stm Arsenal 3-0 Bolton]
 |passage=It moves them from 17th to 12th on seven points, while Bolton are now bottom of the table with five '''straight''' defeats.}}
-#* '''2008''', "Bad vibrations", ''The Economist'', 30 Oct 2008:
+#* '''2008''', "Bad vibrations", ''{{w|The Economist}}'', 30 Oct 2008:
 #*: As of October 29th, three-month dollar Libor (the rate at which banks borrow from each other) had fallen for 13 '''straight''' days and was nearly one-and-a-half percentage points below its October 10th level.
 # In proper order; as it should be. {{defdate|from 19th c.}}
 #* '''2007''', Grant Allen, ''What's Bred in the Bone'', p. 140:
 #*: Oh, music, how he loved it; it seemed to set everything '''straight''' all at once in his head.
-#* '''2010''', Paul Gallagher, ''The Observer'', 15 Aug 2010:
+#* '''2010''', Paul Gallagher, ''{{w|The Observer}}'', 15 Aug 2010:
 #*: "If you wonder why folks can't take the news seriously, here's Exhibit A," said one blogger. "Lord Jesus, how can the reporter file this story with a '''straight''' face?"
 # Of [[spirit]]s: [[undiluted]], [[unmixed]]; [[neat]]. {{defdate|from 19th c.}}
 #* '''2003''', Ron Jordan, ''Considerations'':
@@ -62,7 +59,7 @@
 #* '''2003''', Lowell Edmunds, ''Martini, Straight Up'', p. 94:
 #*: The Martini is still in ''belief'', if not in fact, the centerpiece of a rite, and people who would not drink '''straight''' gin on the rocks will drink '''straight''' gin on the rocks if it is called a Martini.
 # {{context|cricket|lang=en}} Describing the [[bat]] as held so as not to [[incline]] to either side; on, or near a line running between the two [[wicket]]s. {{defdate|from 19th c.}}
-#* '''2011''', Alan Gardner & Barney Ronay, ''The Guardian'', 15 Mar 2011:
+#* '''2011''', Alan Gardner & Barney Ronay, ''{{w|The Guardian}}'', 15 Mar 2011:
 #*: Steyn continues and it's all a bit more orderly down his end as O'Brien defends the first three balls with a '''straight''' bat and a respectful dip of the head.
 # {{context|colloquial|lang=en}} [[conventional|Conventional]], socially acceptable; [[unadventurous]]. {{defdate|from 20th c.}}
 #* '''1994''', Jarvis Cocker, ‘Do You Remember the First Time?’:
@@ -73,17 +70,17 @@
 #* '''2001''', Ruella Frank, ''Body of Evidence'', p. 28:
 #*: ‘Alex's dad used a lot of drugs. He's been '''straight''' for years now, but it took a long time for him to be able to deal with his feelings.’
 # {{context|colloquial|lang=en}} [[heterosexual|Heterosexual]].
-#* '''2007''', Layla Kumari, ''The Guardian'', 17 Sep 2007:
+#* '''2007''', Layla Kumari, ''{{w|The Guardian}}'', 17 Sep 2007:
 #*: Some of my friends - gay and '''straight''' - seem unable to understand the close but platonic nature of my and Gian's relationship, but have been supportive.
 #* '''2011''', Jodi Picoult, ''Sing You Home'', p. 273:
 #*: Angela smiles. ‘I'm '''straight''', Zoe, and I'm happily married.’
 # {{context|colloquial|slang|pejorative|lang=en}} [[boring|Boring]], [[unimaginative]], [[mainstream]]. {{defdate|from 20th c.}}
-#: ''My boyfriend is '''straight'''.'' = He is plain boring.
 #* {{w|Wavy Gravy}}
-#*: ‘Sure, I could have done it different... put my clown in a closet and dressed up in '''straight''' clothing. I could have compromised my essence, and swallowed my soul.’
+#*: ‘Sure, I could have done it different{{...}}put my clown in a closet and dressed up in '''straight''' clothing. I could have compromised my essence, and swallowed my soul.’
 #* '''1989''', Gus Van Sant, ''Drugstore Cowboy''.
 #*: ‘For all the boredom the '''straight''' life brings, it's not too bad.’
-# {{context|obsolete|rare|lang=en}} [[strait]]; [[narrow]]
+#: {{usex|My boyfriend is '''straight'''.}}
+# {{context|obsolete|rare|lang=en}} [[strait|Strait]]; [[narrow]].
 #* Sir J. Mandeville
 #*: Egypt is a long country, but it is '''straight''', that is to say, narrow.
 
