--- a/en/c/clung.6836.wikitext
+++ b/en/c/clung.6836.wikitext
@@ -14,41 +14,16 @@
 ====Translations====
 {{trans-top|simple past}}
 * Dutch: [[klampte]]
-* Indonesian:
-** [[sangkut|menyangkut]]
-** [[sangkut|menyangkutkan]]
-** [[gantung|bergantung]]
-** [[gantung|menggantung]]
-** [[gantung|menggantungkan]]
+* Indonesian: {{t|id|sangkut|alt=menyangkut}}, {{t|id|sangkut|alt=menyangkutkan}}, {{t|id|gantung|alt=bergantung}}, {{t|id|gantung|alt=menggantung}}, {{t|id|gantung|alt=menggantungkan}}
 {{trans-mid}}
-* Japanese:
-** [[掛けた]] ([[かけた]], kaketa)
-** [[ぶら下がった]] ([[ぶらさがった]], burasagatta)
-** [[ぶら下げた]] ([[ぶらさげた]], burasageta)
+* Japanese: {{t|ja|掛けた|tr=[[かけた]], kaketa}}, {{t|ja|ぶら下がった|tr=[[ぶらさがった]], burasagatta}}, {{t|ja|ぶら下げた|tr=[[ぶらさげた]], burasageta}}
 {{trans-bottom}}
 
 {{trans-top|past participle}}
 * Dutch: [[geklampt]]
-* Indonesian:
-** [[sangkut|menyangkut]]
-** [[sangkut|menyangkutkan]]
-** [[sangkut|tersangkut]]
-** [[sangkut|disangkutkan]]
-** [[gantung|bergantung]]
-** [[gantung|menggantung]]
-** [[gantung|menggantungkan]]
-** [[gantung|digantung]]
-** [[gantung|tergantung]]
-** [[gantung|digantungkan]]
+* Indonesian: {{t|id|sangkut|alt=menyangkut}}, {{t|id|sangkut|alt=menyangkutkan}}, {{t|id|sangkut|alt=tersangkut}}, {{t|id|sangkut|alt=disangkutkan}}, {{t|id|gantung|alt=bergantung}}, {{t|id|gantung|alt=menggantung}}, {{t|id|gantung|alt=menggantungkan}}, {{t|id|gantung|alt=digantung}}, {{t|id|gantung|alt=tergantung}}, {{t|id|gantung|alt=digantungkan}}
 {{trans-mid}}
-* Japanese:
-** [[掛けた]] ([[かけた]], kaketa)
-** [[掛けられる]] ([[かけられる]], kakerareru)
-** [[掛けられた]] ([[かけられた]], kakerareta)
-** [[ぶら下がった]] ([[ぶらさがった]], burasagatta)
-** [[ぶら下げた]] ([[ぶらさげた]], burasageta)
-** [[ぶら下げられる]] ([[ぶらさげられる]], burasagerareru)
-** [[ぶら下げられた]] ([[ぶらさげられた]], burasagerareta)
+* Japanese: {{t|ja|掛けた|tr=[[かけた]], kaketa}}, {{t|ja|掛けられる|tr=[[かけられる]], kakerareru}}, {{t|ja|掛けられた|tr=[[かけられた]], kakerareta}}, {{t|ja|ぶら下がった|tr=[[ぶらさがった]], burasagatta}}, {{t|ja|ぶら下げた|tr=[[ぶらさげた]], burasageta}}, {{t|ja|ぶら下げられる|tr=[[ぶらさげられる]], burasagerareru}}, {{t|ja|ぶら下げられた|tr=[[ぶらさげられた]], burasagerareta}}
 {{trans-bottom}}
 
 ===Adjective===
