--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -77,6 +77,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * German: {{t+|de|geschnitten}}, {{t-|de|geschliffen}}
 * Portuguese: {{t-|pt|carvado|m}}
 * Russian: {{t-|ru|огранённый|sc=Cyrl|tr=ogranjónnyj}}
+* Spanish: {{t|es|tallado}}
 {{trans-bottom}}
 
 {{trans-top|in cricket, played with a horizontal bat}}
