--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -135,6 +135,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Macedonian: {{t-|mk|влече|tr=vléče|sc=Cyrl}}
 * Malay: {{t-|ms|tarik}}
 * Norwegian: {{t+|no|trekke}}, {{t+|no|dra}}
+* Novial: {{tø|nov|tira}}
 * Persian: {{t+|fa|کشیدن|tr=kešidan|sc=fa-Arab}}
 * Polish: {{t+|pl|ciągnąć}} {{impf}}, {{t-|pl|pociągnąć}} {{pf.}}
 * Portuguese: {{t+|pt|puxar}},  {{t+|pt|tirar}}
