t+arz:[[ستارة]] ([[WT:EDIT|Assisted]]) <curtain#21482340>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -39,6 +39,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 {{trans-top|piece of cloth covering a window}}
 * Albanian: {{t-|sq|perde|m}}
 * Arabic: {{t-|ar|ستارة|f|tr=sitāra}}
+*: Egyptian Arabic: {{tø|arz|ستارة|f|tr=setaara|sc=Arab}}
 * Armenian: {{t-|hy|վարագույր|tr=varaguyr}}
 * Asturian: {{t-|ast|cortina|f}}
 * Azeri: {{t+|az|pərdə}}
