--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -8,8 +8,11 @@
 * {{rhymes|æntʃ|ɑːntʃ}}
 * {{a|RP}} {{IPA|/bɹɑːntʃ/}}
 
+===Alternative forms===
+* {{l/en|braunch}}
+
 ===Etymology===
-From {{etyl|fro|en}} {{term|branche|lang=fro}}, from {{etyl|VL.|en}} {{term|branca||paw|lang=la}}, possibly from Gaulish {{recons|vranca|lang=cel-gau}}. Indo-European cognates include [[Old Norse]] {{term|vró||angle, corner|lang=non}}, [[Lithuanian]] {{term|rankà||hand|lang=lt}}, [[Old Church Slavonic]] {{term|рѫка|tr=rǫka||hand|lang=cu}}, [[Albanian]] {{term|rangë||yard work|lang=sq}}.
+From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{term|bronche|lang=enm}}, from {{etyl|fro|en}} {{term|branche|lang=fro}}, {{term|brance|lang=fro}}, from {{etyl|VL.|en}} {{term|branca||footprint", later also "paw, claw|lang=la}}, of unknown origin, possibly from Gaulish {{recons|vranca|lang=cel-gau}}. Indo-European cognates include [[Old Norse]] {{term|vró||angle, corner|lang=non}}, [[Lithuanian]] {{term|rankà||hand|lang=lt}}, [[Old Church Slavonic]] {{term|рѫка|tr=rǫka||hand|lang=cu}}, [[Albanian]] {{term|rangë||yard work|lang=sq}}.
 
 ===Noun===
 {{en-noun|es}}
