added "Min Nan" section with /nan-hanzi/ template and one "tlpa=" (TLPA) and "gd=" reading; added /defn|lang=nan|sort=日05/ template; added "References" section and VoiceDic dictionary link <昜#21491794>

--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -55,6 +55,18 @@
 
 ----
 
+==Min Nan==
+
+===Hanzi===
+{{nan-hanzi|tlpa=iông (iong<sup>5</sup>)|gd=iong<sup>2</sup>}}
+
+# {{defn|lang=nan|sort=日05}}
+
+====References====
+*[http://cn.voicedic.com/ VoiceDic (汉语方言发音字典)]
+
+----
+
 ==Vietnamese==
 
 ===Han character===
