--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=13|four=4433<sub>6</sub>|canj=廿大口心 (TKRP)}}
+{{Han char|rn=61|rad=心|as=09|sn=13|four=4433<sub>6</sub>|canj=廿大口心 (TKRP)|ids=⿱[[若]][[心]]}}
 
 # [[irritate]], [[vex]], [[offend]], [[incite]]
 
