--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -52,6 +52,18 @@
 
 ----
 
+==Min Nan==
+
+===Hanzi===
+{{nan-hanzi|tlpa=jiá (jia<sup>2</sup>), liá (liasup>2</sup>)}}
+
+# {{defn|lang=nan|sort=心09}}
+
+====References====
+*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9452&curpage=1&sample=%E6%83%B9&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=4 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
+
+----
+
 ==Vietnamese==
 
 ===Han character===
