/* Min Nan */ typo fix <惹#21497177>

--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -55,7 +55,7 @@
 ==Min Nan==
 
 ===Hanzi===
-{{nan-hanzi|tlpa=jiá (jia<sup>2</sup>), liá (liasup>2</sup>)}}
+{{nan-hanzi|tlpa=jiá (jia<sup>2</sup>), liá (lia<sup>2</sup>)}}
 
 # {{defn|lang=nan|sort=心09}}
 
