--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -43,6 +43,7 @@ One possibility is that 早 is a pictograph of [[sun]] (日) over the [[horizon]
 
 [[Category:Japanese terms written with one Han script character]]
 [[Category:Japanese terms spelled with 早]]
+
 ----
 
 ==Korean==
@@ -85,6 +86,18 @@ One possibility is that 早 is a pictograph of [[sun]] (日) over the [[horizon]
 
 [[Category:Mandarin entries with audio links]]
 [[Category:cmn:Beginning Mandarin in simplified script|zao3]]
+
+----
+
+==Min Nan==
+
+===Hanzi===
+{{nan-hanzi|tlpa=tsá (tsa<sup>2</sup>), tsái (tsai<sup>2</sup>)}}
+
+# {{defn|lang=nan|sort=日02}}
+
+====References====
+*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=2446&curpage=1&sample=%E6%97%A9&radiobutton=1&querytarget=1&limit=20&pagenum=2&rowcount=30 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
