--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -43,6 +43,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Portuguese: {{t+|pt|contar}}
 * Romanian: {{t-|ro|socoti}}
 * Russian: {{t+|ru|счёт|m|tr=sčot|sc=Cyrl}}
+* Spanish: {{t|es|cuenta|f}}
 {{trans-bottom}}
 
 {{trans-top|the result of a tally that reveals the number of items in a set}}
