/* Translations */+vec, eo <choose#21541411>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -52,6 +52,7 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Czech: {{t+|cs|volit|impf}}, {{t-|cs|zvolit|pf}}, {{t|cs|vybírat|impf}}, {{t+|cs|vybrat|pf}}
 * Danish: {{t-|da|vælge}}, {{t-|da|udvælge}}, {{t-|da|foretrække}}
 * Dutch: {{t+|nl|kiezen}}, {{t+|nl|uitkiezen}}
+* Esperanto: {{t-|eo|elekti}}
 * Estonian: {{t|et|valima}}
 * Extremaduran: {{tø|ext|escohel}}
 * Finnish: {{t+|fi|valita}}
@@ -112,6 +113,7 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Ukrainian: {{t|uk|вибирати|impf|tr=vybyráty|sc=Cyrl}}, {{t|uk|вибрати|pf|tr=výbraty|sc=Cyrl}}
 * Urdu: {{t-|ur|چننا|tr=cunnā}}
 * Uzbek: {{t|uz|tanlamoq}}
+* Venetian: {{t+|vec|ẑernir}}, {{t-|vec|sièlder}}
 * Vietnamese: {{t+|vi|chọn}}, {{t+|vi|lựa chọn}}, {{t+|vi|kén chọn}}
 * Welsh: {{t+|cy|dewis}}
 {{trans-bottom}}
@@ -188,8 +190,8 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * German: {{t+|de|entscheiden}}
 * Ilocano: {{tø|ilo|pili}}
 * Italian: {{t+|it|decidere}}
-{{trans-mid}}
 * Korean: {{t+|ko|선택하다|sc=Kore}}
+{{trans-mid}}
 * Latin: {{t+|la|lego}}
 * Maltese: {{t-|mt|iddeċieda}}
 * Portuguese: {{t+|pt|escolher}}, {{t+|pt|escolher|m}}
@@ -200,6 +202,7 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 *: Cyrillic: {{t-|sh|одлучити}}, {{t-|sh|одабрати}}
 *: Roman: {{t-|sh|odlučiti}}, {{t-|sh|odabrati}}
 * Spanish: {{t+|es|escoger}}, {{t+|es|elegir}}
+* Venetian: {{t-|vec|deciđer}}, {{t-|vec|desidar}}
 {{trans-bottom}}
 
 {{checktrans-top}}
