t+chr:[[ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ ᎾᎿ ᎠᎺᏰᏟ]] ([[WT:EDIT|Assisted]]) <United States of America#21549306>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -29,6 +29,7 @@
 * Burmese: {{t-|my|အမေရိကန်ပြည်ထောင်စုသမတနိုင်ငံ|sc=Mymr|tr=ămeri.kan pyidaungzu. thămăta. naingngan}}
 * Catalan: {{t-|ca|Estats Units d'Amèrica|m-p}}
 * Chechen: {{tø|ce|Американ Цхьанакхетта Штаташ|tr=Amerikan Cẋanaqetta Štataš}}
+* Cherokee: {{t|chr|ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ ᎾᎿ ᎠᎺᏰᏟ|sc=Cher}}
 * Chinese:
 *: Cantonese: {{tø|yue|美利堅合眾國|tr=mei5lei6gin1hap6zung3gwok3|sc=Hani}}, {{tø|yue|美國|tr=mei5gwok3|sc=Hani}}, {{tø|yue|美|tr=mei5|sc=Hani}}
 *: Mandarin: {{t|cmn|美利堅合眾國|sc=Hani}}, {{t-|cmn|美利坚合众国|tr=[[Měilìjiān Hézhòngguó]]|sc=Hani}}, {{t-|cmn|美國|sc=Hani}}, {{t-|cmn|美国|tr=[[Měiguó]]|sc=Hani}}, {{t-|cmn|美|tr=[[Měi]]-|sc=Hani}}
