/* Translations */ <United States of America#21549349>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -81,10 +81,10 @@
 * Malayalam: {{t-|ml|അമേരിക്കൻ ഐക്യനാടുകൾ|sc=Mlym}}
 * Maltese: {{t-|mt|Stati Uniti ta' l-Amerika}}, {{t-|mt|l-Istati Uniti ta' l-Amerika}}, {{t-|mt|Stati Uniti}}, {{t-|mt|l-Istati Uniti}}, {{t-|mt|USA}}
 * Marathi: {{t-|mr|अमेरिकेची संयुक्त संस्थाने|tr=amerikecī sanyukta sansthāne|sc=Deva}}
-* Maori: {{t|mi|Hononga-o-Amerika}}
+* Māori: {{t|mi|Hononga-o-Amerika}}
 * Mongolian: {{t+|mn|Америкийн Нэгдсэн Улс|tr=Amerikiyn Negdsen Uls|sc=Cyrl}}
-* Nahuatl: {{t|nah|Tlacetilīlli Tlahtohcāyōtl Ixachitlān}}
 * Navajo: {{tø|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}
+* Nāhuatl: {{t|nah|Tlacetilīlli Tlahtohcāyōtl Ixachitlān}}
 * Nepali: {{t-|ne|संयुक्त राज्य अमेरिका|tr=sanyukta rājya amerikā|sc=Deva}}
 * Northern Sami: {{tø|se|Amerihká ovttastuvvan stáhtat}}
 * Norwegian: {{t+|no|Amerikas forente stater}}, {{t-|no|De forente stater}}
