--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -151,7 +151,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Italian: {{t-|it|essere una schiappa}}, {{t-|it|fare schifo}}
 * Japanese: {{t-|ja|サック|tr=sakku|sc=Jpan}}
 * Norwegian: {{t-|no|suge}}
-* Portuguese: {{t+|pt|saco}} {{qualifier|vulgar}}
+* Portuguese: {{t+|pt|saco}}
 * Russian: {{t+|ru|отстой|tr=otstój|sc=Cyrl}} {{qualifier|noun}}
 * Swedish: {{t+|sv|suga}}
 {{trans-bottom}}
