--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -30,7 +30,7 @@ Note the different forms, corresponds to different forms of [[真]].
 ===Proper noun===
 {{ja-pos|k|proper|hira=しん|rom=Shin}} 
 
-# {{given name|male|lang=ja|skey=しん}} 
+# {{given name|male|lang=ja|sort=しん}} 
 [[Category:Japanese male given names|しん]]
 
 ===Kanji===
