--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -102,7 +102,9 @@
 [[Category:en:Countries of Europe]]
 [[Category:en:Czechia]]
 
-[[ast:Czech Republic]]
+#
+#
+#[[ast:Czech Republic]]
 [[cs:Czech Republic]]
 [[cy:Czech Republic]]
 [[da:Czech Republic]]
@@ -128,3 +130,4 @@
 [[ta:Czech Republic]]
 [[tg:Czech Republic]]
 [[tr:Czech Republic]]
+[[Wikipedia article]]
