--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=4460<sub>1</sub>|canj=廿日 (TA)|ids=⿱龷日}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=4460<sub>1</sub>|canj=廿日 (TA)|ids=⿱[[龷]][[日]]}}
 
 # [[formerly]]
 # [[ancient]]
