--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -74,7 +74,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[xí]] ([[xi2]])|wg=hsi<sup>2</sup>}}, [[xī]], [[cuò]]
+{{cmn-hanzi|pin=[[xí]] ([[xi2]]), [[cuò]] ([[cuo4]])|wg=hsi<sup>2</sup>, ts'o<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=日04}}
 
