--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -27,13 +27,11 @@
 ====Readings====
 * {{ja-readings|on=[[えん]] (en)|kun=[[かき]] (kaki)}}
 
+{{kanji readings tab|垣|かき|sort=かき}}
 ===Noun===
 {{ja-noun|k|hira=かき|rom=kaki}} 
 
 # [[fence]]
-
-[[Category:Japanese terms written with one Han script character]]
-[[Category:Japanese terms spelled with 垣]]
 
 ----
 
