--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -14,11 +14,14 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 {{en-noun}}
 
 # Physical [[matter]]; [[material]].
+#*{{quote-magazine|date=2013-07-20|volume=408|issue=8845|magazine={{w|The Economist}}
+|title=[http://www.economist.com/news/science-and-technology/21581981-what-pollution-some-opportunity-others-welcome-plastisphere Welcome to the plastisphere]
+|passage=Plastics are energy-rich '''substances''', which is why many of them burn so readily. Any organism that could unlock and use that energy would do well in the Anthropocene. Terrestrial bacteria and fungi which can manage this trick are already familiar to experts in the field.}}
 # The [[essential]] part of anything; the most vital part.
 # Considerable wealth or resources.
-#: ''A man of '''substance'''.''
-# [[drug|Drugs]] {{gloss|illegal narcotics}}
-#: '''''substance''' abuse''
+#: {{usex|lang=en|a man of '''substance'''}}
+# [[drug|Drugs]]. {{gloss|illegal narcotics}}
+#: {{usex|lang=en|'''substance''' abuse}}
 
 ====Related terms====
 * [[subsist]]
