--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -299,7 +299,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|butere||butter|lang=ang}}, fro
 {{trans-bottom}}
 
 {{trans-top|other foodstuffs like butter}}
-* Esperanto: {{t|eo|smiraĵo}}
+* Esperanto: {{t|eo|ŝmiraĵo}}
 * French: {{t+|fr|beurre|m}}
 * Russian: {{t+|ru|масло|n|tr=máslo|sc=Cyrl}}
 {{trans-mid}}
