--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -11,27 +11,24 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 * {{homophones|lang=en|fined}}
 
 ===Verb===
-[[File:Nymphs finding the Head of Orpheus.jpg|thumb|upright|"Nymphs Finding the Head of Orpheus", a painting by [[w:John William Waterhouse|John William Waterhouse]]]]
+[[File:Nymphs finding the Head of Orpheus.jpg|thumb|upright|"Nymphs Finding the Head of Orpheus", a painting by {{w|John William Waterhouse}}]]
 {{en-verb|finds|finding|'''[[found]]''' or '''[[fand]]''' {{qualifier|dialectal}}|'''[[found]]''' or {{qualifier|archaic}} '''[[founden]]'''}}
 
 # {{context|transitive|lang=en}} To [[encounter]], to [[discover]] something [[search]]ed for.
-#: ''Project Gutenberg '''finds''' that Find is the 190th most important word in the English language.
-#: ''I '''found''' my car keys -- they were under the couch.''
-#* {{quote-news
-|year=2011
-|date=January 25
-|author=Paul Fletcher
-|title=Arsenal   3 - 0   Ipswich (agg 3 - 1)
-|work=BBC
-|url=http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm
-|page=
+#* {{quote-news|year=2011|date=January 25|author=Paul Fletcher|work=BBC
+|title=[http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm Arsenal 3-0 Ipswich (agg. 3-1)]
 |passage=Van Persie scored a hat-trick against Wigan on Saturday and should have '''found''' the net again after Bendtner '''found''' him at the far post but the Dutchman's header rebounded to safety off the crossbar.}}
+#*{{quote-magazine|date=2013-07-20|volume=408|issue=8845|magazine={{w|The Economist}}
+|title=[http://www.economist.com/news/science-and-technology/21581981-what-pollution-some-opportunity-others-welcome-plastisphere Welcome to the plastisphere]
+|passage=Plastics are energy-rich substances, which is why many of them burn so readily. Any organism that could unlock and use that energy would do well in the Anthropocene. Terrestrial bacteria and fungi which can manage this trick are already familiar to experts in the field. Dr Mincer and Dr Amaral-Zettler '''found''' evidence of them on their marine plastic, too.}}
+#: {{usex|lang=en|Project Gutenberg '''finds''' that Find is the 190th most important word in the English language.}}
+#: {{usex|lang=en|I '''found''' my car keys&mdash;they were under the couch.}}
 # {{context|transitive|lang=en}} To [[point out]].
-#: ''He kept '''finding''' faults with my work.''
+#: {{usex|lang=en|He kept '''finding''' faults with my work.}}
 # {{context|transitive|lang=en}} To decide that, to form the [[opinion]] that.
-#: ''I '''find''' your argument unsatisfactory.''
+#: {{usex|lang=en|I '''find''' your argument unsatisfactory.}}
 # {{context|intransitive|lang=en}} To [[determine]] or [[judge]].
-#: ''The jury '''finds''' for the defendant.''
+#: {{usex|lang=en|The jury '''finds''' for the defendant.}}
 
 ====Synonyms====
 * See also [[Wikisaurus:deem]]
