--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -122,6 +122,7 @@ Alternate etymology connects {{etyl|frk|-}} {{term/t|frk|*blund}} to {{etyl|gem-
 *: Ancient: {{tø|grc|ξανθός|sc=polytonic}}
 * Latin: {{t+|la|flavus|alt=flāvus|m}}
 * Macedonian: {{t-|mk|светол|m|tr=svétol}}, {{t-|mk|белолик|m|tr=bélolik}}, {{t-|mk|светла|f|tr=svétla}}, {{t-|mk|белолика|f|tr=belólika}}
+* Persian: {{t|fa|بور|tr=bur|sc=fa-Arab}}
 * Russian: {{t+|ru|белый|tr=bélyj}}
 * Swedish: {{t+|sv|ljus}}, {{t+|sv|ljushyad}}, blond
 * Volapük: {{t+|vo|blonik}}, {{qualifier|obsolete}} {{t-|vo|blönik}}
