/* Translingual */ added "ids=" ⿱覀土 (composition) data to /Han char/ template <垔#21579749>

--- a/en/垔/垔.13080.wikitext
+++ b/en/垔/垔.13080.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=1010<sub>4</sub>|canj=一田土 (MWG), X一田土 (XMWG)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=1010<sub>4</sub>|canj=一田土 (MWG), X一田土 (XMWG)|ids=⿱[[覀]][[土]]}}
 
 # to [[restrain]]
 # to [[dam]] a [[stream]] and [[change]] its [[direction]]
