/* Verb */ Quote added <play#21584627>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -12,50 +12,41 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 {{en-verb}}
 
 # {{context|intransitive|lang=en}} To act in a manner such that one has [[fun]]; to engage in activities expressly for the purpose of [[recreation]].
-#: ''They '''played''' long and hard.''
 #* '''2001''', Annabelle Sabloff, ''Reordering the Natural World'', Univ. of Toronto Press, page 83:
 #*: A youngster''...''listed some of the things his pet did not do<!--''...''-->: ''...''go on vacation, '''play''' in the same way that he did with his friends, and so on.
 #* '''2003''', Anne-Nelly Perret-Clermont et al. (eds.), ''Joining Society: Social Interaction and Learning in Adolescence and Youth'', Cambridge Univ. Press, page 52:
 #*: We had to play <!--[drums]--> for an hour, so that meant that we didn't have time to '''play''' and joke around.
+#: {{usex|lang=en|They '''played''' long and hard.}}
 # {{context|intransitive|lang=en}} To take part in [[amorous]] activity; to [[make love]], [[fornicate]]; to [[have sex]].
-#* '''1590''', Edmund Spenser, ''The Faerie Queene'', II.iv:
+#* '''1590''', {{w|Edmund Spenser}}, ''{{w|The Faerie Queene}}'', II.iv:
 #*: Her proper face / I not descerned in that darkesome shade, / But weend it was my loue, with whom he '''playd'''.
 # {{context|intransitive|lang=en}} To perform in a sport.
-#: ''He '''plays''' on three teams.''
-#: ''Who's '''playing''' now?''
+#: {{usex|lang=en|he '''plays''' on three teams;&nbsp;who's '''playing''' now?}}
 # {{context|transitive|lang=en}} To participate in the game indicated.
-#: '''''play''' football''
-#: '''''play''' sports''
-#: '''''play''' games''
+#: {{usex|lang=en|'''play''' football;&nbsp; '''play''' sports;&nbsp; '''play''' games}}
 # {{context|transitive|lang=en}} To compete against, in a game
-#* {{quote-news
-|year=2011
-|date=November 12
-|author=
-|title=International friendly: England 1-0 Spain
-|work=BBC Sport
-|url=http://news.bbc.co.uk/sport2/hi/football/15693231.stm
-|page=
+#* {{quote-news|year=2011|date=November 12|work=BBC Sport
+|title=[http://news.bbc.co.uk/sport2/hi/football/15693231.stm International friendly: England 1-0 Spain]
 |passage=England will not be catapulted among the favourites for Euro 2012 as a result of this win, but no victory against Spain is earned easily and it is right they take great heart from their efforts as they now prepare to '''play''' Sweden at Wembley on Tuesday.}}
 # {{context|transitive|lang=en}} To act as the indicated role, especially in a performance.
-#: ''He '''plays''' the King, and she's the Queen.''
-#: ''No part of the brain '''plays''' the role of permanent memory.''
+#*{{quote-magazine|year=2013|month=May-June|author=[http://www.americanscientist.org/authors/detail/katrina-g-claw Katrina G. Claw]
+|title=[http://www.americanscientist.org/issues/feature/2013/3/rapid-evolution-in-eggs-and-sperm Rapid Evolution in Eggs and Sperm]
+|volume=101|issue=3|magazine={{w|American Scientist}}
+|passage=In plants, the ability to recognize self from nonself '''plays''' an important role in fertilization, because self-fertilization will result in less diverse offspring than fertilization with pollen from another individual.}}
+#: {{usex|lang=en|He '''plays''' the King, and she's the Queen.}}
+#: {{usex|lang=en|No part of the brain '''plays''' the role of permanent memory.}}
 # {{context|intransitive|lang=en}} To produce music using a musical instrument.
-#: ''I've practiced the piano off and on, and I still can't '''play''' very well.''
+#: {{usex|lang=en|I've practiced the piano off and on, and I still can't '''play''' very well.}}
 # {{context|transitive|ergative|lang=en}} To produce music on the indicated musical instrument.
-#: ''I'll '''play''' the piano and you sing.''
-#: ''Can you '''play''' an instrument?''
+#: {{usex|lang=en|I'll '''play''' the piano and you sing;&nbsp; can you '''play''' an instrument?}}
 # {{context|transitive|ergative|lang=en}} To produce music, the indicated song or style, with a musical instrument.
-#: ''We especially like to '''play''' jazz together.''
-#: '''''Play''' a song for me.''
-#: ''Do you know how to '''play''' Für Elise?''
-#: ''My son thinks he can '''play''' music.''
+#: {{usex|lang=en|we especially like to '''play''' jazz together'&nbsp; '''play''' a song for me;&nbsp; do you know how to '''play''' Für Elise?;&nbsp; my son thinks he can '''play''' music}}
 # {{context|transitive|ergative|lang=en}} To use a device to watch or listen to the indicated recording.
-#: ''You can '''play''' the DVD now.''
+#: {{usex|lang=en|You can '''play''' the DVD now.}}
 # {{context|copulative|lang=en}} Contrary to fact, to give an appearance of being.
 #* '''1985''', Sharon S Brehm, ''Intimate Relationships''
 #*: '''Playing''' hard to get is not the same as slamming the door in someone's face.
-#* '''1996''', Michael P Mal  one, ''James J Hill: Empire Builder of the Northwest''
+#* '''1996''', Michael P Malone, ''James J Hill: Empire Builder of the Northwest''
 #*: Now, surveying his final link, he had the nice advantage of being able to '''play''' coy with established port cities that desperately wanted his proven railroad.
 #* '''2003''', John U. Ogbu, ''Black American Students in an Affluent Suburb: A Study of Academic Disengagement'', page 194
 #*: Instead, they '''played''' dumb, remained silent, and did their classwork.
