--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -160,6 +160,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Japanese: {{t+|ja|部門|tr=ぶもん, bumon|sc=Jpan}}, {{t-|ja|支店|tr=してん, shiten|sc=Jpan}}, {{t-|ja|支社|tr= ししゃ, shisha|sc=Jpan}}
 {{trans-mid}}
 * Korean: {{t+|ko|지점|tr=jijeom|sc=Kore}} ({{t+|ko|支店|sc=Kore}}), {{t+|ko|지사|tr=jisa|sc=Kore}} ({{t+|ko|支社|sc=Kore}})
+* Persian: {{t|fa|شعبه|tr=šobe|sc=fa-Arab}}
 * Polish: {{t+|pl|oddział}}, {{t+|pl|filia}}
 * Portuguese: {{t+|pt|filial|f}}, {{t-|pt|departamanto}}, {{t+|pt|divisão}}, {{t+|pt|repartição}}
 * Romanian: {{t-|ro|filială|f}}, {{t+|ro|sucursală|f}}
