t+dsb:[[butra]] ([[WT:EDIT|Assisted]]) <butter#21584864>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -274,6 +274,8 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|butere||butter|lang=ang}}, fro
 * Sinhalese: {{t-|si|බටර්|tr=batar|sc=Sinh}}
 * Slovak: {{t-|sk|maslo|n}}
 * Slovene: {{t+|sl|maslo|n}}, {{t-|sl|puter|m}} {{qualifier|colloquial}}
+* Sorbian:
+*: Lower Sorbian: {{tø|dsb|butra|f}}
 * Sotho: {{t+|st|sereledi}}
 * Spanish: {{t+|es|mantequilla|f}}, {{t+|es|manteca|f}} {{qualifier|Argentina, Paraguay, Uruguay}}
 * Swahili: {{t+|sw|siagi}}
