/* Translations */  eo translations +1 <coat#21585137>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -39,7 +39,7 @@ From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{et
 * Czech: {{t-|cs|kabát|m}}
 * Danish: {{t-|da|frakke|c}}
 * Dutch: {{t+|nl|mantel|m}}, {{t+|nl|jas|m}}
-* Esperanto: {{t-|eo|palto}}
+* Esperanto: {{t-|eo|jako}}, {{qualifier|portata eksterdome, vintre aŭ ĝenerale en malvarma vetero}} {{t-|eo|palto}}
 * Estonian: {{t+|et|mantel}}
 * Finnish: {{t+|fi|takki}}
 * French: {{t+|fr|manteau|m}}, {{t+|fr|paletot|m}}
