--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -132,7 +132,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Kyrgyz: {{t|ky|айтуу|tr=aytuu|sc=Cyrl}}, {{t|ky|сүйлөө|tr=süylöö|sc=Cyrl}}
 * Lao: {{t-|lo|ເວົ້າ|tr=waw|sc=Laoo}}
 * Latgalian: {{tø|ltg|runuot}}
-* Latin: {{t+|la|dico|alt=dīcō}}, {{t-|la|fabulor|alt=fābulor}}, {{t+|la|loquor}}, {{t+|la|for}}, {{t-|la|effor}}
+* Latin: {{t+|la|loquor}}, {{t+|la|dico|alt=dīcō}}, {{t-|la|fabulor|alt=fābulor}}, {{t+|la|for}}, {{t-|la|effor}}
 * Latvian: {{t-|lv|runāt}}
 * {{trreq|lzz}}
 * Lithuanian: {{t+|lt|kalbėti}}
