--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -56,11 +56,12 @@ Literally, “for the sake of example”.  Used to introduce an [[example]] or l
 * Icelandic: {{t+|is|t.d.}} {{qualifier|{{t+|is|til dæmis}}}}
 * Italian: [[ad es.]] {{qualifier|[[ad esempio]]}}
 * Japanese: [[例]] (rei)
-{{trans-mid}}
 * Korean: [[예]] (ye)
+{{trans-mid}}
 * Latvian: [[piem.]] {{qualifier|[[piemēram]]}}
 * Lithuanian: [[pvz.]] {{qualifier|[[pavyzdžiui]]}}
 * Lojban: {{t+|jbo|mu'u}}, {{t+|jbo|mu'a}}
+* Luxembourgish: {{t|lb|z. B.}}
 * Malay: {{t-|ms|mis.}} {{qualifier|[[misalnya]]}}
 * Norwegian: {{t+|no|f.eks.}} {{qualifier|{{t-|no|for eksempel}}}}, {{t+|no|t.d.}} {{qualifier|{{t-|no|til dømes}}}}
 * Persian: [[براي مثال]]
