--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -238,7 +238,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 {{trans-mid}}
 * Norwegian: {{t-|no|funn|n}}
 * Taos: [[thǫ́ne]]
-* Thai: {{t+|th|หา}}
+* Thai: {{t+|th|หา|tr=hăa}}
 {{trans-bottom}}
 
 ===Statistics===
