t+tg:[[ҳис кардан]] t+fa:[[حس کردن]] t-balance t+mn:[[мэдэрхүй]] t+th:[[รู้สึก]] t+lo:[[ຮູ້ສຶກ]] t+bn:[[বোধ করা]] t+my:[[{{trreq}}]] t+km:[[{{trreq}}]] t+sh:[[осетити]] t+sh:[[осјет... <feel#21639689>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -121,7 +121,9 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Aromanian: {{t-|rup|simtu}}
 * Azeri: {{t|az|hiss etmək}}
 * Belarusian: {{t|be|адчуваць|impf|tr=adčuvácʹ|sc=Cyrl}}, {{t|be|адчуць|pf|tr=adčúcʹ|sc=Cyrl}}, {{t|be|чуць|impf|tr=čucʹ|sc=Cyrl}}, {{t|be|пачуць|pf|tr=pačúcʹ|sc=Cyrl}}
+* Bengali: {{t|bn|বোধ করা|tr=bodh kôra|sc=Beng}}
 * Bulgarian: {{t|bg|усещам|impf|tr=uséštam|sc=Cyrl}}, {{t+|bg|чувствам|impf|tr=čúvstvam|sc=Cyrl}}
+* {{trreq|Burmese}}
 * Chinese:
 *: Mandarin: {{t|cmn|感到|tr=gǎndào|sc=Hani}}, {{t|cmn|感覺|sc=Hani}}, {{t|cmn|感觉|tr=gǎnjué|sc=Hani}}
 * Czech: {{t+|cs|cítit|impf}}
@@ -140,27 +142,36 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Hungarian: {{t+|hu|érez}}
 * Icelandic: {{t|is|finna}}
 * Italian: {{t+|it|sentire}}
-{{trans-mid}}
 * Japanese: {{t+|ja|感じる|tr=かんじる,kanjiru}}
 * Jèrriais: {{tø|roa-jer|senti}}
 * Kazakh: {{t|kk|сезу|tr=sezw|sc=Cyrl}}
+* {{trreq|Khmer}}
+{{trans-mid}}
 * Korean: {{t|ko|느끼다|tr=neukkida|sc=Kore}}
 * Kyrgyz: {{t|ky|сезүү|tr=sezüü|sc=Cyrl}}
+* Lao: {{t|lo|ຮູ້ສຶກ|tr=huu-syk|sc=Laoo}}
 * Latin: {{t+|la|sentio}}
 * Latvian: {{t|lv|justies}}
 * Lithuanian: {{t|lt|jausti}}, {{t|lt|pajusti}}
+* Macedonian: {{t|mk|чувствува|tr=čúvstvuva|sc=Cyrl}}
+* Mongolian: {{t|mn|мэдэрхүй|tr=mederhüj|sc=Cyrl}}
 * Norwegian: {{t+|no|føle}}
 * Occitan: {{t+|oc|sentir}}
-* Persian: {{t|fa|احساس کردن|tr=ehsâs kardan|sc=fa-Arab}}
+* Persian: {{t|fa|احساس کردن|tr=ehsâs kardan|sc=fa-Arab}}, {{t|fa|حس کردن|tr=hes kardan|sc=fa-Arab}}
 * Polish: {{t+|pl|czuć|impf}}
 * Romanian: {{t+|ro|simți}}
 * Romansch: {{t-|rm|sentir}}, {{t-|rm|santir}}, {{t-|rm|santeir}}
 * Russian: {{t+|ru|чувствовать|impf|tr=čúvstvovatʹ}}, {{t+|ru|почувствовать|pf|tr=počúvstvovatʹ}}, {{t+|ru|ощущать|impf|tr=oščuščátʹ|sc=Cyrl}}, {{t+|ru|ощутить|pf|tr=oščutítʹ|sc=Cyrl}}, {{t|ru|чуять|tr=čújatʹ|sc=Cyrl}}, {{t+|ru|почуять|pf|tr=počújatʹ}}
 * Sardinian: {{t-|sc|sentire}}, {{t-|sc|sentiri}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|осетити}}, {{t|sh|осјетити}}
+*: Roman: {{t|sh|osetiti}}, {{t|sh|osjetiti}}
 * Slovak: {{t|sk|cítiť|impf}}
 * Slovene: {{t+|sl|čutiti|impf}}
 * Spanish: {{t+|es|sentir}}
 * Swedish: {{t|sv|känna}}
+* Tajik: {{t|tg|ҳис кардан|tr=his kardan|sc=Cyrl}}
+* Thai: {{t|th|รู้สึก|tr=róo sèuk|sc=Thai}}
 * Turkish: {{t+|tr|hissetmek}}
 * Turkmen: {{t|tk|duýmak}}
 * Ukrainian: {{t|uk|відчувати|impf|tr=vidčuváty|sc=Cyrl}}, {{t|uk|почувати|impf|tr=počuváty|sc=Cyrl}}, {{t|uk|чути|impf|tr=čúty|sc=Cyrl}}
