--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -158,7 +158,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Norwegian: {{t+|no|føle}}
 * Occitan: {{t+|oc|sentir}}
 * Persian: {{t|fa|احساس کردن|tr=ehsâs kardan|sc=fa-Arab}}, {{t|fa|حس کردن|tr=hes kardan|sc=fa-Arab}}
-* Polish: {{t+|pl|czuć|impf}}
+* Polish: {{t+|pl|czuć|impf}}, {{t|pl|poczuć}}
 * Romanian: {{t+|ro|simți}}
 * Romansch: {{t-|rm|sentir}}, {{t-|rm|santir}}, {{t-|rm|santeir}}
 * Russian: {{t+|ru|чувствовать|impf|tr=čúvstvovatʹ}}, {{t+|ru|почувствовать|pf|tr=počúvstvovatʹ}}, {{t+|ru|ощущать|impf|tr=oščuščátʹ|sc=Cyrl}}, {{t+|ru|ощутить|pf|tr=oščutítʹ|sc=Cyrl}}, {{t|ru|чуять|tr=čújatʹ|sc=Cyrl}}, {{t+|ru|почуять|pf|tr=počújatʹ}}
