--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -153,19 +153,19 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Latin: {{t+|la|sentio}}
 * Latvian: {{t|lv|justies}}
 * Lithuanian: {{t|lt|jausti}}, {{t|lt|pajusti}}
-* Macedonian: {{t|mk|чувствува|tr=čúvstvuva|sc=Cyrl}}
+* Macedonian: {{t|mk|чувствува|impf|tr=čúvstvuva|sc=Cyrl}}
 * Mongolian: {{t|mn|мэдэрхүй|tr=mederhüj|sc=Cyrl}}
 * Norwegian: {{t+|no|føle}}
 * Occitan: {{t+|oc|sentir}}
-* Persian: {{t|fa|احساس کردن|tr=ehsâs kardan|sc=fa-Arab}}, {{t|fa|حس کردن|tr=hes kardan|sc=fa-Arab}}
-* Polish: {{t+|pl|czuć|impf}}, {{t|pl|poczuć}}
+* Persian: {{t|fa|حس کردن|tr=hes kardan|sc=fa-Arab}}, {{t|fa|احساس کردن|tr=ehsâs kardan|sc=fa-Arab}}
+* Polish: {{t+|pl|czuć|impf}}, {{t|pl|poczuć|pf}}
 * Romanian: {{t+|ro|simți}}
 * Romansch: {{t-|rm|sentir}}, {{t-|rm|santir}}, {{t-|rm|santeir}}
 * Russian: {{t+|ru|чувствовать|impf|tr=čúvstvovatʹ}}, {{t+|ru|почувствовать|pf|tr=počúvstvovatʹ}}, {{t+|ru|ощущать|impf|tr=oščuščátʹ|sc=Cyrl}}, {{t+|ru|ощутить|pf|tr=oščutítʹ|sc=Cyrl}}, {{t|ru|чуять|tr=čújatʹ|sc=Cyrl}}, {{t+|ru|почуять|pf|tr=počújatʹ}}
 * Sardinian: {{t-|sc|sentire}}, {{t-|sc|sentiri}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|осетити}}, {{t|sh|осјетити}}
-*: Roman: {{t|sh|osetiti}}, {{t|sh|osjetiti}}
+*: Cyrillic: {{t|sh|осећати|impf}}, {{t|sh|осетити|pf}}, {{t|sh|осјећати|impf}}, {{t|sh|осјетити|pf}}
+*: Roman: {{t|sh|osećati|impf}}, {{t|sh|osetiti|pf}}, {{t|sh|osjećati|impf}}, {{t|sh|osjetiti|pf}}
 * Slovak: {{t|sk|cítiť|impf}}
 * Slovene: {{t+|sl|čutiti|impf}}
 * Spanish: {{t+|es|sentir}}
@@ -174,7 +174,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Thai: {{t|th|รู้สึก|tr=róo sèuk|sc=Thai}}
 * Turkish: {{t+|tr|hissetmek}}
 * Turkmen: {{t|tk|duýmak}}
-* Ukrainian: {{t|uk|відчувати|impf|tr=vidčuváty|sc=Cyrl}}, {{t|uk|почувати|impf|tr=počuváty|sc=Cyrl}}, {{t|uk|чути|impf|tr=čúty|sc=Cyrl}}
+* Ukrainian: {{t|uk|відчувати|impf|tr=vidčuváty|sc=Cyrl}}, {{t|uk|відчути|pf|tr=vidčúty|sc=Cyrl}}, {{t|uk|почувати|impf|tr=počuváty|sc=Cyrl}}, {{t|uk|чути|impf|tr=čúty|sc=Cyrl}}, {{t|uk|почути|pf|tr=počúty|sc=Cyrl}}
 * Urdu: {{t-|ur|محسوس کرنا|tr=mahsūs karnā|sc=ur-Arab}}
 * Uzbek: {{t|uz|qilmoq}}
 * Vietnamese: {{t|vi|cảm thấy}}
