t+tl:[[maramdaman]] t-balance t+id:[[merasa]] t+ms:[[berasa]] t+id:[[berasa]] ([[WT:EDIT|Assisted]]) <feel#21639765>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -141,19 +141,21 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Hindi: {{t-|hi|महसूस करना|tr=mahsūs karnā|sc=Deva}}
 * Hungarian: {{t+|hu|érez}}
 * Icelandic: {{t|is|finna}}
+* Indonesian: {{t|id|merasa}}, {{t|id|berasa}}
 * Italian: {{t+|it|sentire}}
 * Japanese: {{t+|ja|感じる|tr=かんじる,kanjiru}}
 * Jèrriais: {{tø|roa-jer|senti}}
 * Kazakh: {{t|kk|сезу|tr=sezw|sc=Cyrl}}
 * {{trreq|Khmer}}
-{{trans-mid}}
 * Korean: {{t|ko|느끼다|tr=neukkida|sc=Kore}}
+{{trans-mid}}
 * Kyrgyz: {{t|ky|сезүү|tr=sezüü|sc=Cyrl}}
 * Lao: {{t|lo|ຮູ້ສຶກ|tr=huu-syk|sc=Laoo}}
 * Latin: {{t+|la|sentio}}
 * Latvian: {{t|lv|justies}}
 * Lithuanian: {{t|lt|jausti}}, {{t|lt|pajusti}}
 * Macedonian: {{t|mk|чувствува|impf|tr=čúvstvuva|sc=Cyrl}}
+* Malay: {{t|ms|berasa}}
 * Mongolian: {{t|mn|мэдэрхүй|tr=mederhüj|sc=Cyrl}}
 * Norwegian: {{t+|no|føle}}
 * Occitan: {{t+|oc|sentir}}
@@ -170,6 +172,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Slovene: {{t+|sl|čutiti|impf}}
 * Spanish: {{t+|es|sentir}}
 * Swedish: {{t|sv|känna}}
+* Tagalog: {{t|tl|maramdaman}}
 * Tajik: {{t|tg|ҳис кардан|tr=his kardan|sc=Cyrl}}
 * Thai: {{t|th|รู้สึก|tr=róo sèuk|sc=Thai}}
 * Turkish: {{t+|tr|hissetmek}}
