t+tt:[[сизәргә]] t+tt:[[тоярга]] t+tt:[[хис итәргә]] t+tr:[[duymak]] t+az:[[duymaq]] ([[WT:EDIT|Assisted]]) <feel#21640544>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -119,7 +119,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Arabic: {{t+|ar|شعر|tr=šáʿara}}
 * Armenian: {{t|hy|զգալ|sc=Armn}}
 * Aromanian: {{t-|rup|simtu}}
-* Azeri: {{t|az|hiss etmək}}
+* Azeri: {{t|az|hiss etmək}}, {{t|az|duymaq}}
 * Belarusian: {{t|be|адчуваць|impf|tr=adčuvácʹ|sc=Cyrl}}, {{t|be|адчуць|pf|tr=adčúcʹ|sc=Cyrl}}, {{t|be|чуць|impf|tr=čucʹ|sc=Cyrl}}, {{t|be|пачуць|pf|tr=pačúcʹ|sc=Cyrl}}
 * Bengali: {{t|bn|বোধ করা|tr=bodh kôra|sc=Beng}}
 * Bulgarian: {{t|bg|усещам|impf|tr=uséštam|sc=Cyrl}}, {{t+|bg|чувствам|impf|tr=čúvstvam|sc=Cyrl}}
@@ -175,8 +175,9 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Swedish: {{t|sv|känna}}
 * Tagalog: {{t|tl|maramdaman}}
 * Tajik: {{t|tg|ҳис кардан|tr=his kardan|sc=Cyrl}}
+* Tatar: {{t|tt|сизәргә|tr=sizärgä|sc=Cyrl}}, {{t|tt|тоярга|tr=toyarğa|sc=Cyrl}}, {{t|tt|хис итәргә|tr=xis itärğä|sc=Cyrl}}
 * Thai: {{t|th|รู้สึก|tr=róo sèuk|sc=Thai}}
-* Turkish: {{t+|tr|hissetmek}}
+* Turkish: {{t+|tr|hissetmek}}, {{t|tr|duymak}}
 * Turkmen: {{t|tk|duýmak}}
 * Ukrainian: {{t|uk|відчувати|impf|tr=vidčuváty|sc=Cyrl}}, {{t|uk|відчути|pf|tr=vidčúty|sc=Cyrl}}, {{t|uk|почувати|impf|tr=počuváty|sc=Cyrl}}, {{t|uk|чути|impf|tr=čúty|sc=Cyrl}}, {{t|uk|почути|pf|tr=počúty|sc=Cyrl}}
 * Urdu: {{t-|ur|محسوس کرنا|tr=mahsūs karnā|sc=ur-Arab}}
