--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -129,6 +129,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Czech: {{t+|cs|cítit|impf}}
 * Dalmatian: {{tø|dlm|senter}}
 * Danish: {{t+|da|føle}}
+* Dutch: {{t|nl|voelen}}
 * Esperanto: {{t-|eo|senti}}
 * Estonian: {{t|et|tundma}}
 * Finnish: {{t+|fi|tuntea}}
@@ -142,14 +143,15 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Hungarian: {{t+|hu|érez}}
 * Icelandic: {{t|is|finna}}
 * Indonesian: {{t|id|merasa}}, {{t|id|berasa}}
+* Irish: {{t|ga|braith}}
 * Italian: {{t+|it|sentire}}
 * Japanese: {{t+|ja|感じる|tr=かんじる,kanjiru}}
 * Jèrriais: {{tø|roa-jer|senti}}
 * Kazakh: {{t|kk|сезу|tr=sezw|sc=Cyrl}}
 * {{trreq|Khmer}}
 * Korean: {{t|ko|느끼다|tr=neukkida|sc=Kore}}
-* Kyrgyz: {{t|ky|сезүү|tr=sezüü|sc=Cyrl}}
 {{trans-mid}}
+* Kyrgyz: {{t|ky|сезүү|tr=sezüü|sc=Cyrl}}
 * Lao: {{t|lo|ຮູ້ສຶກ|tr=huu-syk|sc=Laoo}}
 * Latin: {{t+|la|sentio}}
 * Latvian: {{t|lv|justies}}
@@ -161,6 +163,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Occitan: {{t+|oc|sentir}}
 * Persian: {{t|fa|حس کردن|tr=hes kardan|sc=fa-Arab}}, {{t|fa|احساس کردن|tr=ehsâs kardan|sc=fa-Arab}}
 * Polish: {{t+|pl|czuć|impf}}, {{t|pl|poczuć|pf}}
+* Portuguese: {{t|pt|sentir}}
 * Romanian: {{t+|ro|simți}}
 * Romansch: {{t-|rm|sentir}}, {{t-|rm|santir}}, {{t-|rm|santeir}}
 * Russian: {{t+|ru|чувствовать|impf|tr=čúvstvovatʹ}}, {{t+|ru|почувствовать|pf|tr=počúvstvovatʹ}}, {{t+|ru|ощущать|impf|tr=oščuščátʹ|sc=Cyrl}}, {{t+|ru|ощутить|pf|tr=oščutítʹ|sc=Cyrl}}, {{t|ru|чуять|tr=čújatʹ|sc=Cyrl}}, {{t+|ru|почуять|pf|tr=počújatʹ}}
