--- a/en/惯/惯.15620.wikitext
+++ b/en/惯/惯.15620.wikitext
@@ -5,7 +5,7 @@
 {{Han simp|慣|f=	貫|t=贯}}
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心田十人 (PWJO)}}
+{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心田十人 (PWJO)|ids=⿰[[忄]][[贯]]}}
 
 # [[habit]], [[custom]]
 # [[habitually]], [[usual]]
