--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -148,7 +148,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 * Japanese: {{t+|ja|感じる|tr=かんじる,kanjiru}}
 * Jèrriais: {{tø|roa-jer|senti}}
 * Kazakh: {{t|kk|сезу|tr=sezw|sc=Cyrl}}
-* Khmer: {{t|km|អារម្មណ៍|tr=mien aarɑm|alt=មានអារម្មណ៍|sc=Khmr}}
+* Khmer: {{t|km|មានអារម្មណ៍|tr=mien aarɑm|sc=Khmr}}
 * Korean: {{t|ko|느끼다|tr=neukkida|sc=Kore}}
 {{trans-mid}}
 * Kyrgyz: {{t|ky|сезүү|tr=sezüü|sc=Cyrl}}
