--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -359,6 +359,8 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 |work=BBC
 |url=http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm
 |passage=Arsenal were starting to work up a head of steam and Tractor Boys boss Paul Jewell '''cut''' an increasingly frustrated figure on the touchline.}}
+# {{context|transitive|lang=en}} To [[stop]] or [[disengage]]
+#* '''Cut''' the engines when the plane comes to a halt!
 
 ====Synonyms====
 * See [[Wikisaurus:cut]]
