t+hi:[[तैलबदर]] t+hi:[[तैलबदर रंग]] t+hi:[[तैलबदर हरि]] ([[WT:EDIT|Assisted]]) <olive#21705176>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -74,7 +74,7 @@
 * {{trreq|gu}}
 * Hausa: {{t-|ha|zaitun|m|alt=zàitûn}}
 * Hebrew: {{t+|he|זית|tr=zait}}
-* Hindi: {{t-|hi|ज़ैतून|tr=zaitūn}}
+* Hindi: {{t-|hi|ज़ैतून|tr=zaitūn}}, {{t|hi|तैलबदर|m|tr=tailbadara|sc=Deva}}
 * Hungarian: {{t+|hu|olajbogyó}}
 * Icelandic: {{t+|is|ólífa|f}}
 * Ido: {{t+|io|olivo}}
@@ -155,6 +155,7 @@
 * Dutch: {{t+|nl|olijfgroen|n}}
 * Finnish: {{t+|fi|oliivinvihreä}}
 * Greek: {{t-|el|λαδί|n|tr=ladí}}
+* Hindi: {{t|hi|तैलबदर|tr=tailbadara|sc=Deva}}, {{t|hi|तैलबदर रंग|tr=tailbadara ranga|sc=Deva}}, {{t|hi|तैलबदर हरि|tr=tailbadara hari|sc=Deva}}
 * Italian: {{t+|it|verde oliva}}
 * Japanese: {{t-|ja|オリーブ色|tr=orību-iro}}
 * Korean: {{t-|ko|올리브색}}
