--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -15,6 +15,9 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 {{en-verb|finds|finding|'''[[found]]''' or '''[[fand]]''' {{qualifier|dialectal}}|'''[[found]]''' or {{qualifier|archaic}} '''[[founden]]'''}}
 
 # {{context|transitive|lang=en}} To [[encounter]], to [[discover]] something [[search]]ed for.
+#*{{quote-book|year=1918|author={{w|W. B. Maxwell}}|chapter=10
+|title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]
+|passage=It was a joy to snatch some brief respite, and '''find''' himself in the rectory drawing–room. Listening here was as pleasant as talking; just to watch was pleasant.}}
 #* {{quote-news|year=2011|date=January 25|author=Paul Fletcher|work=BBC
 |title=[http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm Arsenal 3-0 Ipswich (agg. 3-1)]
 |passage=Van Persie scored a hat-trick against Wigan on Saturday and should have '''found''' the net again after Bendtner '''found''' him at the far post but the Dutchman's header rebounded to safety off the crossbar.}}
