--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -19,7 +19,7 @@
 # A place on the [[coast]] at which ships can [[shelter]], or [[dock]] to load and unload [[cargo]] or [[passenger]]s.
 #* Shakespeare
 #*: peering in maps for '''ports''' and piers and roads
-#*{{quote-magazine|date=2013-06-08|volume=407|issue=8839|page=52|magazine={{w|The Economist}}
+#* {{quote-magazine|date=2013-06-08|volume=407|issue=8839|page=52|magazine={{w|The Economist}}
 |title=[http://www.economist.com/news/international/21579039-chinas-growing-empire-ports-abroad-mainly-about-trade-not-aggression-new-masters The new masters and commanders]
 |passage=From the ground, Colombo’s '''port''' does not look like much. Those entering it are greeted by wire fences, walls dating back to colonial times and security posts. For mariners leaving the '''port''' after lonely nights on the high seas, the delights of the B52 Night Club and Stallion Pub lie a stumble away.}}
 # A town or city containing such a place.
@@ -520,7 +520,7 @@ From late {{etyl|non|no}} {{term|port|lang=non}} {{n}}, {{etyl|gmq-mno|no}} {{te
 * {{rhymes|ɔrt|lang=fro}}
 
 ===Noun===
-{{fro-noun|m|porz|porz|port}}
+{{fro-noun|m}}
 
 # {{l|en|port}} {{gloss|for watercraft}}
 #* {{quote-book|circa 1150|title=[[s:fr:La Chanson de Roland/Raoul Mortier|La Chanson de Roland]]|author=Turoldus|passage=As '''porz''' d'Espaigne en est passet Rollant|translation=Roland went to the ports of Spain}}
