--- a/en/垔/垔.13080.wikitext
+++ b/en/垔/垔.13080.wikitext
@@ -29,7 +29,7 @@
 # {{defn|lang=ja|sort=土06}}
 
 ====Readings====
-* {{ja-readings|on=[[おう]] (shyō), [[じゅ]] (ju), [[とう]] (tō), [[ず]] (zu)|kun=[[ふさぐ]] (fusagu)}}
+* {{ja-readings|on=[[おう]] (ou), [[じゅ]] (ju), [[とう]] (tō), [[ず]] (zu)|kun=[[ふさぐ]] (fusagu)}}
 
 ----
 
