Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) — please review: cmn <fight#21764887>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -280,11 +280,12 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 =====Translations=====
 {{trans-top|occasion of fighting}}
 * Albanian: {{t-|sq|luftë|f}}
-* Armenian: {{t-|hy|կռիվ|tr=kṙiv}}
+* Armenian: {{t-|hy|կռիվ}}
 * Basque: {{t-|eu|borroka}}, {{t-|eu|borrokaldi}}
-* Bulgarian: {{t+|bg|бой|m|sc=Cyrl}}, {{t+|bg|сражение|n|sc=Cyrl}}
-* Catalan: [[lluita]] {{f}}, [[combat]] {{m}}
-* Chinese: {{zh-tsp|鬥爭|斗争|dòuzhēng}}, {{zh-tsp|戰鬥|战斗|zhàndòu}}
+* Bulgarian: {{t+|bg|бой|m|tr=boj|sc=Cyrl}}, {{t+|bg|сражение|n|tr=sražénie|sc=Cyrl}}
+* Catalan: {{t|ca|lluita|f}}, {{t|ca|combat|m}}
+* Chinese:
+*: Mandarin: {{t|cmn|鬥爭|sc=Hani}}, {{t|cmn|斗争|tr=dòuzhēng|sc=Hani}}, {{t|cmn|戰鬥|sc=Hani}}, {{t|cmn|战斗|tr=zhàndòu|sc=Hani}}
 * Czech: {{t+|cs|boj|m}}
 * Danish: {{t+|da|kamp}}
 * Dutch: {{t+|nl|gevecht|n}}
@@ -308,7 +309,7 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 * Romanian: {{t-|ro|luptă|f}}, {{t-|ro|bătaie}}
 * Romansch: {{qualifier|military}} {{t-|rm|cumbat|m}}, {{t-|rm|cumbata|f}}, {{qualifier|sport}} {{t-|rm|lutga|f}}
 * Russian: {{t+|ru|драка|f|tr=dráka}}, {{t+|ru|бой|m|tr=boj}}
-* Scottish Gaelic: [[cogadh]] {{m}}, [[sabaid]] {{f}}, {{t-|gd|còmhrag|f}}
+* Scottish Gaelic: {{t|gd|cogadh|m}}, {{t|gd|sabaid|f}}, {{t-|gd|còmhrag|f}}
 * Slovak: {{t-|sk|boj}}
 * Spanish: {{t+|es|lucha|f}}, {{t+|es|lucha|f}}
 * Swahili: {{t+|sw|vita}}
@@ -316,20 +317,21 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 {{trans-bottom}}
 
 {{trans-top|battle}}
-* Armenian: {{t+|hy|մարտ|tr=mart}}
+* Armenian: {{t+|hy|մարտ}}
 * Basque: {{t-|eu|gudu}}, {{t-|eu|bataila}}
-* Bulgarian: {{t+|bg|битка|f|tr=bítka|sc=Cyrl}}, {{t+|bg|сражение|n|tr=sražénije|sc=Cyrl}}
-* Chinese: {{zh-tsp|鬥爭|斗争|dòuzhēng}}, {{zh-tsp|戰鬥|战斗|zhàndòu}}
+* Bulgarian: {{t+|bg|битка|f|tr=bítka|sc=Cyrl}}, {{t+|bg|сражение|n|tr=sražénie|sc=Cyrl}}
+* Chinese:
+*: Mandarin: {{t|cmn|鬥爭|sc=Hani}}, {{t|cmn|斗争|tr=dòuzhēng|sc=Hani}}, {{t|cmn|戰鬥|sc=Hani}}, {{t|cmn|战斗|tr=zhàndòu|sc=Hani}}
 * Danish: {{t+|da|kamp}}, {{t+|da|slag}}
 * Dutch: {{t+|nl|gevecht|n}}, {{t+|nl|strijd|m}}
 * Finnish: {{t+|fi|taistelu}}
 * French: {{t+|fr|bataille|f}}
 * German: {{t+|de|Kampf|m}}, {{t+|de|Schlacht|f}}
 * Hebrew: {{t-|he|קרב|m|tr=kráv}}
-* Hindi: {{t+|hi|युद्ध|sc=Deva}}, {{t-|hi|लड़ाई|sc=Deva}}, {{t-|hi|झगड़ा|sc=Deva}}
+* Hindi: {{t+|hi|युद्ध|tr=yud'dha|sc=Deva}}, {{t-|hi|लड़ाई|tr=laṛā'ī|sc=Deva}}, {{t-|hi|झगड़ा|tr=jhagṛā|sc=Deva}}
 * Icelandic: {{t+|is|bardagi|m}}
 * Italian: {{t+|it|battaglia|f}}, {{t+|it|combattimento|m}}
-* Japanese: [[戦闘]] (sentô)
+* Japanese: {{t|ja|戦闘|tr=せんとう, sentô|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|batâle|f}}
 * Kurdish:
 *: Sorani: {{t+|ku|شه‌ڕ|tr=shaR|sc=ku-Arab}}
@@ -343,7 +345,7 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 * Portuguese: {{t+|pt|batalha|f}}, {{t+|pt|luta|f}}
 * Romansch: {{t-|rm|cumbat|m}}, {{t-|rm|cumbata|f}}
 * Russian: {{t+|ru|битва|f|tr=bítva}}, {{t+|ru|сражение|n|tr=sražénije}}
-* Scottish Gaelic: [[cogadh]] {{m}}, [[sabaid]] {{f}}, [[blàr]] {{m}}
+* Scottish Gaelic: {{t|gd|cogadh|m}}, {{t|gd|sabaid|f}}, {{t|gd|blàr|m}}
 * Swahili: {{t+|sw|vita}}
 * Swedish: {{t+|sv|strid}}, {{t+|sv|kamp}}
 * Tamil: {{t+|ta|சண்டை|tr=saṇṭai|sc=Taml}}
@@ -353,13 +355,13 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 {{trans-top|physical confrontation}}
 * Bulgarian: {{t+|bg|бой|m|tr=boj|sc=Cyrl}}
 * Danish: {{t-|da|slagsmål}}, {{t-|da|ballade}}
-* Dutch: [[gevecht]] {{n}}, [[boel]] {{m}} {{qualifier|colloquial|Flanders}}
+* Dutch: {{t|nl|gevecht|n}}, {{qualifier|colloquial|Flanders}} {{t|nl|boel|m}}
 * Finnish: {{t+|fi|tappelu}}, {{t+|fi|taistelu}}
 * French: {{t+|fr|bagarre|f}}
-* German: [[Keilerei]] {{f}}, {{t+|de|Prügelei|f}}
+* German: {{t|de|Keilerei|f}}, {{t+|de|Prügelei|f}}
 * Hebrew: {{t-|he|ריב|m|tr=rív}}, {{t+|he|מאבק|m|tr=ma`avák}}
 * Italian: {{t+|it|rissa|f}}
-* Japanese: [[喧嘩]] (けんか, kenka)
+* Japanese: {{t|ja|喧嘩|tr=けんか, kenka|sc=Jpan}}
 * Latin: {{t+|la|pugna}}
 {{trans-mid}}
 * Latvian: {{t-|lv|kautiņš}}
@@ -369,7 +371,7 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 * Polish: {{t-|pl|starcie|n}}
 * Portuguese: {{t+|pt|briga|f}}
 * Russian: {{t+|ru|драка|f|tr=dráka}}, {{t+|ru|бой|m|tr=boj}}
-* Scottish Gaelic: [[cogadh]] {{m}}, [[sabaid]] {{f}}, {{t-|gd|còmhrag|f}}
+* Scottish Gaelic: {{t|gd|cogadh|m}}, {{t|gd|sabaid|f}}, {{t-|gd|còmhrag|f}}
 * Swahili: {{t+|sw|vita}}
 * Tok Pisin: {{t-|tpi|pait}}
 {{trans-bottom}}
@@ -378,13 +380,13 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 * Czech: {{t+|cs|zápas}}
 * Danish: {{t+|da|kamp}}
 * Dutch: {{t+|nl|gevecht|n}}
-* Finnish: [[kamppailu]], ([[ottelu]])
+* Finnish: {{t|fi|kamppailu}}, ([[ottelu]])
 * French: {{t+|fr|combat|m}}
 * Hebrew: {{t-|he|קרב|m|tr=kráv}}
 * Icelandic: {{t+|is|bardagi|m}}, {{t-|is|slagur|m}}
 * Italian: {{t+|it|combattimento|m}}, {{t+|it|incontro|m}}
 {{trans-mid}}
-* Japanese: [[試合]] (しあい, shiai)
+* Japanese: {{t|ja|試合|tr=しあい, shiai|sc=Jpan}}
 * Norwegian: {{t+|no|kamp}}
 * Polish: {{t+|pl|walka|f}}
 * Portuguese: {{t+|pt|luta|f}}, {{t+|pt|combate|m}}
@@ -394,7 +396,7 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 {{trans-bottom}}
 
 {{trans-top|conflict of will, strife}}
-* Armenian: [[պայքար]] (payk'ar)
+* Armenian: {{t|hy|պայքար|sc=Armn}}
 * Danish: {{t+|da|kamp}}
 * Dutch: {{t+|nl|strijd|m}}
 * Finnish: {{t+|fi|taistelu}}
@@ -404,30 +406,30 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 {{trans-mid}}
 * Norwegian: {{t+|no|kamp}}
 * Polish: {{t+|pl|walka|f}}
-* Russian: {{t+|ru|борьба|f|tr=bor'bá}}
+* Russian: {{t+|ru|борьба|f|tr=borʹbá}}
 * Scottish Gaelic: {{t-|gd|còmhrag|f}}
 * Swahili: {{t+|sw|vita}}
 * Swedish: {{t+|sv|kamp}}
 {{trans-bottom}}
 
 {{trans-top|will or ability to fight}}
-* Czech: [[bojovnost]] {{f}}
-* Dutch: [[vechtlust]] {{m}}
+* Czech: {{t|cs|bojovnost|f}}
+* Dutch: {{t|nl|vechtlust|m}}
 * Finnish: {{t+|fi|taistelutahto}}
 * German: {{t-|de|Kampfgeist|m}}
 * Hebrew: {{t-|he|רוח קרב|f|tr=rú`akh kráv}}
 {{trans-mid}}
-* Japanese: [[ファイト]] (faito), [[闘志]] (tōshi), [[戦意]] (sen'i)
+* Japanese: {{t|ja|ファイト|tr=faito|sc=Jpan}}, {{t|ja|闘志|tr=とうし, tōshi|sc=Jpan}}, {{t|ja|戦意|tr=せんい, sen'i|sc=Jpan}}
 * Norwegian: {{t-|no|stridslyst}}
 * Polish: {{t-|pl|bojowość|f}}
-* Portuguese: [[combatividade]] {{f}}
+* Portuguese: {{t|pt|combatividade|f}}
 * Swahili: {{t+|sw|vita}}
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|fa}}: [[Jangidan]], [[جنگیدن، حمله کردن]]
+* {{ttbc|fa}}: {{t|fa|Jangidan|sc=Arab}}, {{t|fa|جنگیدن، حمله کردن|sc=Arab}}
 {{trans-mid}}
-* {{ttbc|te}}: [[కొట్లాట]] (koTlaaTa), [[పోరాటం]] (pOraaTaM)
+* {{ttbc|te}}: {{t|te|కొట్లాట|tr=koTlaaTa|sc=Telu}}, {{t|te|పోరాటం|tr=pOraaTaM|sc=Telu}}
 {{trans-bottom}}
 
 ====Statistics====
