--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -56,6 +56,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|икона|f|sc=Cyrl}}
 *: Roman: {{t-|sh|ikona|f}}
+* Slovene: {{t|sl|ikona|f}}
 * Spanish: {{t+|es|icono|m}}, {{t-|es|ícono|m}}
 * Swedish: {{t+|sv|ikon|c}}, {{t+|sv|bild|c}}
 * Vietnamese: {{t-|vi|biểu tượng}}
