--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -251,6 +251,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 {{trans-top|to communicate a fact or feeling}}
 * Finnish: {{t-|fi|viestiä}}, {{t+|fi|ilmaista}}
 {{trans-mid}}
+* Spanish: {{t|es|hablar}}
 {{trans-bottom}}
 
 {{checktrans-top}}
