--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -259,6 +259,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Kurdish:
 *: Sorani: {{t-|ku|یاری کردن|tr=yarí kirdin|sc=ku-Arab}}
 {{trans-mid}}
+* Latin: {{t|la|ludo}}
 * Lithuanian: {{t+|lt|žaisti}}
 * Macedonian: {{t-|mk|игра|tr=ígra}}
 * Neapolitan: {{tø|nap|jucà}}
