--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|ɛlt}}
 
 ===Etymology 1===
-{{etyl|ang|en}} {{term|felt|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*feltaz}} (compare {{etyl|nl|-}} {{term|vilt|lang=nl}}, {{etyl|de|-}} {{term|Filz|lang=de}}, {{etyl|da|-}} {{term|filt|lang=da}}), from {{etyl|ine-pro|en}} {{term/t|ine-pro|*pilto}}, {{term/t|ine-pro|*pilso}} 'felt' (compare {{etyl|la|-}} {{term|pilleus|lang=la||felt}} (adj.), {{etyl|cu|-}} {{term||plŭstĭ|lang=cu}}, {{etyl|sq|-}} {{term|plis|lang=sq}}, Ancient Greek {{term|πῖλος|tr=pilos|lang=grc|sc=polytonic}}), from *''pel-'' 'to beat'. More at [[anvil]].
+{{etyl|ang|en}} {{term|felt|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*feltaz}} (compare {{etyl|nl|-}} {{term|vilt|lang=nl}}, {{etyl|de|-}} {{term|Filz|lang=de}}, {{etyl|da|-}} {{term|filt|lang=da}}), from {{etyl|ine-pro|en}} {{term/t|ine-pro|*pilto}}, {{term/t|ine-pro|*pilso}} 'felt' (compare {{etyl|la|-}} {{term|pilleus|lang=la||felt}} (adj.), {{etyl|cu|-}} {{term|рлъсть|tr=plŭstĭ|lang=cu}}, {{etyl|sq|-}} {{term|plis|lang=sq}}, Ancient Greek {{term|πῖλος|tr=pilos|lang=grc|sc=polytonic}}), from *''pel-'' 'to beat'. More at [[anvil]].
 
 ====Noun====
 {{wikipedia}}
