--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -7,11 +7,11 @@
 {{Han compound|早|止|ls=ic}}, logic of compound unclear. From Old Chinese '''*deʔ''' (Baxter-Sagart).
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6080<sub>1</sub>|canj=日一卜人 (AMYO)|ids=⿱[[曰]][[正]]}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6080<sub>1</sub>|canj=日一卜人 (AMYO)|ids=⿱[[日]]⿱[[一]][[龰]]}}
 
 # [[indeed]], [[yes]], [[right]]
 # to [[be]]
-# demonstrative pronoun, [[this]], [[that]]
+# demonstrative [[pronoun]], [[this]], [[that]]
 
 ====Derived characters====
 * [[提]]
