/* Translingual */ wikilinked "de facto" text in second definition entry <既#21831611>

--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -9,7 +9,7 @@ Note the stroke order in the right component 旡, which may not be clear in the 
 {{Han char|rn=71|rad=无|as=05|sn=9|four=7171<sub>4</sub>|canj=日戈一女山 (AIMVU)}}
 
 # [[already]]
-# de facto
+# [[de facto]]
 # [[since]]
 # [[then]]
 
