--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -52,7 +52,7 @@ From {{etyl|sh|en}} [[Jugoslavija]], in turn from [[jug]]o (''south'') and '''sl
 * Portuguese: {{t+|pt|Jugoslávia|f}} ({{qualifier|Portugal}}), {{t+|pt|Iugoslávia|f}} ({{qualifier|Brazil}})
 * Russian: {{t+|ru|Югославия|f|tr=Jugoslávija}}
 * Serbo-Croatian:
-*: Cyrillic: {{t-|sh|Југославија|f|tr=Jugòslāvija|alt=Југо̀сла̄вија|sc=Cyrl}}, {{t-|sh|Југославија|f|tr=Jugoslȁvija|alt=Југосла̏вија|sc=Cyrl}}
+*: Cyrillic: {{t-|sh|Југославија|f|alt=Југо̀сла̄вија|sc=Cyrl}}, {{t-|sh|Југославија|f|alt=Југосла̏вија|sc=Cyrl}}
 *: Latin: {{t-|sh|Jugòslāvija|f}}, {{t-|sh|Jugoslȁvija|f}}
 * Slovak: {{t-|sk|Juhoslávia|f}}
 * Slovene: {{t+|sl|Jugoslávija|f}}
