--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -5,7 +5,7 @@
 [[Image:Crocus_sativus_sahuran.jpg|thumb|The saffron crocus plant.]]
 
 ===Etymology===
-From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safranum|lang=la}}, from {{etyl|ar|en}} {{term|زَعْفَرَان|tr=zaʾfarān|lang=ar}}, possibly from {{etyl|fa|en}} {{term|*زرپران|tr=zar-parân|lang=fa}}.
+From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safranum|lang=la}}, from {{etyl|ar|en}} {{term|زَعْفَرَان|tr=zaʾfarān|lang=ar}}, possibly from {{etyl|fa|en}} {{recons|زرپران|tr=zar-parân|lang=fa}}.
 
 ===Noun===
 {{en-noun|~}}
@@ -52,7 +52,7 @@ From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safra
 * Portuguese: {{t+|pt|açafrão|m}}
 * Romanian: {{t+|ro|șofran|m}}
 * Russian: {{t+|ru|шафран|m|tr=šafrán}}
-* Sanskrit: {{t-|sa|कुङ्कुम}}, {{t-|sa|kuṅkum}}{{rfscript|sa|sc=Deva}}
+* Sanskrit: {{t-|sa|कुङ्कुम|tr=kuṅkum}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|шафран|m}}
 *: Roman: {{t-|sh|šafran|m}}
