t+eo:[[ventro]] t-balance t+pt:[[aturar]] t+eo:[[elporti]] t+eo:[[elteni]] t+eo:[[toleraĉi]] ([[WT:EDIT|Assisted]]) <stomach#21922952>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -190,6 +190,7 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 *: Mandarin: {{t|cmn|腹部|tr=fùbù|sc=Hani}}, {{t-|cmn|肚子|tr=dùzi|sc=Hani}}
 * Czech: {{t+|cs|břicho|n}}
 * Dutch: {{t+|nl|buik}}
+* Esperanto: {{t|eo|ventro}}
 * Estonian: {{t-|et|kõht}}, {{t-|et|magu}}
 * Finnish: {{t+|fi|maha}}, {{t+|fi|vatsa}}
 * French: {{t+|fr|ventre|m}}, {{t+|fr|bedon|m}} ([[pot belly]])
@@ -208,9 +209,9 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * Korean: {{t+|ko|배|tr=bae|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t-|ku|زگ|tr=zig|sc=ku-Arab}}, {{t-|ku|ورگ|tr=wirg|sc=ku-Arab}}
+{{trans-mid}}
 * Kyrgyz: {{t-|ky|карын|tr=qarın|sc=Cyrl}}
 * Latgalian: {{tø|ltg|vādars|m}}
-{{trans-mid}}
 * Latvian: {{t+|lv|vēders|m}}
 * Lithuanian: {{t-|lt|pilvas|m}}
 * Luhya: {{tø|luy|enda}}
@@ -275,9 +276,11 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 
 ====Translations====
 {{trans-top|to tolerate or accept something}}
+* Esperanto: {{t|eo|elporti}}, {{t|eo|elteni}}, {{t|eo|toleraĉi}}
 * Finnish: {{t+|fi|sietää}}, {{t+|fi|kestää}}
 {{trans-mid}}
 * French: {{t+|fr|digérer}}
+* Portuguese: {{t|pt|aturar}}
 {{trans-bottom}}
 
 ===Anagrams===
