/* Derived terms */ <push#22000447>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -47,20 +47,23 @@
 * {{sense|apply a force to something so it moves away}} to [[draw]], to [[pull]], to [[tug]]
 
 ====Derived terms====
-{{top2}}
+{{rel-top3|Terms derived from ''push'' (verb)}}
 <!--"give someone the push-off" is derived from "push off"-->
 * [[pedal pushers]]
-* [[push-bike]]
 * [[push around]]
+* [[push-bike]]
 * [[pushful]]
+{{rel-mid3}}
 * [[push in]]<!--jump the queue/line-->
 * [[push off]]<!--also imperative-->
-{{mid2}}
+* [[push one's luck]]
 * [[pushover]]<!--noun-->
+{{rel-mid3}}
 * [[push someone's buttons]]
+* [[push it]]
 * [[push-up]]
 * [[pushy]]
-{{bottom}}
+{{rel-bottom}}
 
 ====Translations====
 {{trans-top|transitive: apply a force to (an object) so that it moves away}}
